syntax = "proto3";

package proto;

option go_package = "go-grpc-clientStream-calculator/server/internal/gen/proto;proto";

// import "google/protobuf/any.proto";

message CalExpressionRequest{
    string clientName = 1;
    string expression = 2;
}

message CalExpressionResponse{
    double result = 1;
}

message CalRequest{
    string clientName = 1;
    int64 numb1 = 2;
    int64 numb2 = 3;
}

message CalResponse{
    double result = 1;
}

service CalculatorService{
    rpc ExpressionCalculator(stream CalExpressionRequest) returns (CalExpressionResponse) {};
    rpc Addition (CalRequest) returns (CalResponse) {};
    rpc Subtraction (CalRequest) returns (CalResponse) {};
    rpc Multiplication (CalRequest) returns (CalResponse) {};
    rpc Division (CalRequest) returns (CalResponse) {};
}
